    - Apps are no longer disconnected when firewall reloads
    - Connections window need not be open to register blocked applications
    - Multicast support for local network firewall rules
    - Support for machine-global exceptions
- Installer improvements
    - Install location can be customized
    - Warning about remote installations during setup
    - Slightly modernized installer look
- GUI improvements
    - Automatic app recognition for drag&dropped files
    - Manual app detection gives instant first results
    - Live update of traffic rate in tray menu
    - Processes window remembers size
    - Much improved loading time of the Processes window
    - Don't list duplicate processes in Processes window
    - Improved handling of batch whitelisting from Connections list
    - Improved handling of batch whitelisting from Processes list
    - Support F5-refresh in Connections window
    - Support Delete key for application exceptions list
    - Eliminate flicker when updating Connections and Application lists
    - Enable single-click toggling of special exceptions
    - Sort Connections list by timestamp by default
- General reliability improvements
    - Atomically store configuration
    - Reduced probability of failed whitelisting attempts
    - Fix: Don't leave locked files on service exit
    - Fix: Race condition between update check and service message loop
- Deprecation notes
    - Windows Vista no longer supported
    - 32-bit systems no longer supported

---------------------

2.1.11 - Maintenance release (28.07.2019.)
- Fix service hang on some systems when blocklists are enabled
- Fix service hang on some systems when opening Connections window

---------------------

2.1.10 - Maintenance release (19.07.2019.)
- Fix accidentally introduced dependency on .Net 4.8

---------------------

2.1.9 - Maintenance release (18.07.2019.)
- Add support for Windows 10 v1903
- Add drag&drop whitelist support to applications in settings window